--- a/MedData/wear/src/main/res/values/strings.xml
+++ b/MedData/wear/src/main/res/values/strings.xml
@@ -7,13 +7,9 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <string-array name="country_arrays">
-        <item>Malaysia</item>
-        <item>United States</item>
-        <item>Indonesia</item>
-        <item>France</item>
-        <item>Italy</item>
-        <item>Singapore</item>
-        <item>New Zealand</item>
-        <item>India</item>
+        <item>BPT Hospital1</item>
+        <item>BPT Hospital2</item>
+        <item>BPH Hospital1</item>
+
     </string-array>
 </resources>
