--- a/MedData/wear/src/main/res/values/strings.xml
+++ b/MedData/wear/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">MedData</string>
     <string name="hello_round">Hello Round World!</string>
     <string name="hello_square">Hello Square World!</string>
+    <string name="my_digital_name">MedDataFace</string>
 
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
